# C-example-test

20210828_jsontest/: CMakeLists.txt  README.md
20210828_jsontest/configuration_files/: student_info.json
20210828_jsontest/src/: main.cpp
20210828_jsontest/src/config/: studentInfo_config.cpp  studentInfo_config.h
20210828_jsontest/src/json/: CJsonObject.cpp  CJsonObject.hpp
20210828_jsontest/start/: readme.md
